1999-02-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-e20_2.el, poem-om.el
	(find-file-noselect-as-raw-text): Use `raw-text-dos' instead of
	`raw-text'.
	(insert-file-contents-as-raw-text): Likewise.

1999-02-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* Makefile (install): Add voodoo comment `# $(MAKE)'.
	(install-package): Likewise.

	* APEL-MK (install-apel): Run installer with `just-print' mode if
	environment variable "MAKEFLAGS" matches "^[^ =]*n" option.
	(install-apel-package): Likewise.

1999-02-21  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* install.el (install-file): New optional argument JUST-PRINT.
	(install-files): Likewise.
	(install-elisp-module): Likewise.
	(install-elisp-modules): Likewise.

1999-02-18  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* mcs-e20.el (coding-system-get): New function.
	(mime-charset-list): Fix for Emacs 20.2.

1999-02-14  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mcs-om.el (default-mime-charset-for-write): Delete the remaining
	arguments for `defcustom'.
	(TopLevel): Don't refer to `running-emacs-19_29-or-later', use
	`emacs-major-version' and `emacs-minor-version' instead.

1999-02-13  Tanaka Akira  <akr@jaist.ac.jp>

	* mcs-e20.el (charsets-mime-charset-alist): Don't set up
	`iso-2022-int-1' in default.

1999-02-11  Tanaka Akira  <akr@jaist.ac.jp>

	* README.en, README.ja, pccl.el: pccl does not support Mule 1.x.

	* pccl-20.el: Update broken facility message with Emacs version
	it fixes.

1999-02-07  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* install.el (install-prefix): Modify for Meadow.

1999-02-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-ltn1.el, poem-nemacs.el, poem-om.el
	(save-buffer-as-binary): New function.
	(save-buffer-as-raw-text-CRLF): New function.
	(save-buffer-as-coding-system): New function.

	* poem-om.el (poem-ccl-decode-raw-text): Rewrite again for plural
	`CR's.

1999-02-04  Katsumi Yamaoka   <yamaoka@jpl.org>
